# test-app-django

./: Dockerfile  README.md  cloudbuild.yaml  cloudrun_deploy.sh  pyproject.toml  requirements.txt
analysis/: download.sh  download_data_db.sh  main.ipynb
mysite/: delete_all_migrations.py  init.sh
mysite/main_app/: admin.py  forms.py  models.py  urls.py  views.py
mysite/main_app/fixtures/: init_master_table.json  init_master_table.py  intelligibility_items.json  intelligibility_items.py  naturalness_items.json  naturalness_items.py  sample_meta_data.json  sample_meta_data.py  sex.json  sex.py
mysite/main_app/migrations/: 0001_initial.py  0002_rename_kind_kinds_rename_speaker_speakernames_and_more.py  0003_rename_speaker_answers_speaker_name.py
mysite/main_app/templates/main_app/: answers.html  base.html  check_answers.html  check_respondents.html  check_user.html  eval.html  index.html  login.html  login_user.html  news_year_archive.html  register_user.html  respondent_info.html  respondents.html  signup.html  thanks.html  user_page.html
mysite/mysite/: settings.py  urls.py
mysite/mysite/migrations/: 0001_createsuperuser.py
